--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,6 +9,9 @@
 <div class="text-center">
     <h1 class="display-4">Welcome Corey</h1>
     <h2>@Model.ToString()</h2>
-    <h3>@Model.foo</h3>
+    <h3>xxx @Model.foo yyy</h3>
+    <div>line 1: @Model.line1</div>
+    <div>line 2: @Model.line2</div>
+    <div>line 3: @Model.line3</div>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
