--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using net_razor
+@using System.Data.SqlClient
+@using System.Data
+@using System.Data.Common
 @namespace net_razor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
