better debug json

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 @Html.Raw(Model.GetSomeHtml())
 </div>
 <div class="text-center">
-    <h1 class="display-4">Welcome Corey</h1>
+    <h1 class="display-4">Welcome Corey to this page</h1>
     <h2>@Model.ToString()</h2>
     <h3>xxx @Model.foo yyy</h3>
     <div>line 1: @Model.line1</div>
