--- a/Pages/Admin.cshtml
+++ b/Pages/Admin.cshtml
@@ -2,13 +2,13 @@
 @model AdminModel
 
 @{
-    if (true)
+    @* if ()
     {
         Console.WriteLine("Admin html 1");
         <p>bad boy</p>
-        return;
+        //return;
         //Console.WriteLine("Admin html 2");
-    }
+    } *@
 }
 
 @{
