renamed from net_razor to budoco

--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using net_razor
+﻿@using budoco
 @using System.Data.SqlClient
 @using System.Data
 @using System.Data.Common
-@namespace net_razor.Pages
+@namespace budoco.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
