can update user

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Email">Email</a>
                         </li>
+                                                
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Users">Users</a>
+                        </li>                       
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User">User</a>
+                        </li>
                        @{
                            for (int i = 0; i < 3; i++) 
                            {
