--- a/Pages/Email.cshtml
+++ b/Pages/Email.cshtml
@@ -11,9 +11,12 @@
 <div>
     <div>My Email Form</div>
     <form method="post">
-        <div>to<input asp-for="to"></intput></div>
-        <div>from<input asp-for="from"></intput></div>
-        <div>subject<input asp-for="subject"></intput></div>
+        <div>to<input asp-for="to"></input>
+        </div>
+        <div>from<input asp-for="from"></input>
+        </div>
+        <div>subject<input asp-for="subject"></input>
+        </div>
         <div>body<input asp-for="body"></textarea></div>
 
         <div><input type="submit">Send</input></div>
