--- a/Pages/User.cshtml
+++ b/Pages/User.cshtml
@@ -4,11 +4,20 @@
     ViewData["Title"] = "Home page";
 }
 <div>
+    <div>
+        <a href="Users">Back to Users</a>
+    </div>
     <form method="post">
-        <div>id<input asp-for="id" value="@Model.id"></input>
+        <div>id<input asp-for="id" value="@Model.id" disabled></input>
         </div>
         <div>username<input asp-for="username" value="@Model.username"></input>
         </div>
-        <div><input type="submit">Send</input></div>
+        <div>
+            @{
+                string button_text = (@Model.id == 0) ? "Create" : "Update";
+            }
+
+            <button type="submit">@button_text</button>
+        </div>
     </form>
 </div>
