--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@page
 @model IndexModel
+@using Microsoft.AspNetCore.Http
 @{
     ViewData["Title"] = "Home page";
 }
 <div>
     @Model.HttpContext.Session.Id
+</div>
+<div>
+    @Model.HttpContext.Session.GetString("my_count");
 </div>
