--- a/Pages/Users.cshtml
+++ b/Pages/Users.cshtml
@@ -1,10 +1,21 @@
 ﻿@page
 @model UsersModel
+@using Microsoft.AspNetCore.Http
 @{
     ViewData["Title"] = "Users";
 }
 
+<script>
+    function delete_user(id) {
+        $("#delete_id").val(id)
+        $("#delete_form").submit()
+    }
+</script>
+<form id="delete_form" style="" method="post">
+    <input id="delete_id" name="delete_id" value="6666" />
+</form>
 <div>
+    <div class="flash">@bd_util.get_flash(Model.HttpContext)</div>
     <div>
         <a href="User?id=0">Create</a>
     </div>
@@ -32,7 +43,11 @@
                     </td>
                     <td>
                         <a href="User?id=@dr[0]">
-                            Edit
+                            Update
+                        </a>
+                        &nbsp;&nbsp;
+                        <a href="#" onclick="javascript:delete_user(@dr[0])">
+                            Delete
                         </a>
                     </td>
                 </tr>
