--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,5 @@
 <div>
     @Model.HttpContext.Session.Id
 </div>
-<div>
-    @Model.HttpContext.Session.GetString("my_count");
-</div>
+
+<div>@Model.msg</div>
