--- a/Pages/User.cshtml
+++ b/Pages/User.cshtml
@@ -37,6 +37,8 @@
         </div>
         <div>email<input asp-for="email" value="@Model.email"></input>
         </div>
+        <div>is_admin<input asp-for="is_admin" value="@Model.is_admin"></input>
+        </div>
         <div>
             @{
                 string button_text = (@Model.id == 0) ? "Create" : "Update";
