login signout work

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Admin/User">User</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Login?action=signout">Sign Out</a>
+                        </li>
                     </ul>
                 </div>
             </div>
