--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -37,7 +37,7 @@
         </div>
         <div>email<input asp-for="email" value="@Model.email"></input>
         </div>
-        <div>is_admin<input asp-for="is_admin" value="@Model.is_admin"></input>
+        <div>is_admin<input asp-for="is_admin" value="true" />
         </div>
         <div>
             @{
