--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -5,5 +5,41 @@
     ViewData["Title"] = "Issues";
 }
 <div>
-    Issues
+    <a href="Issue?id=0">Create Issue</a>
+</div>
+
+<div>
+    <table class="dt">
+        @{
+            <tr>
+                @{
+                    for (int i = 0; i < Model.dt.Columns.Count; i++)
+                    {
+
+                        <th>@Model.dt.Columns[i].ColumnName</th>
+                    }
+                }
+                <th>Action</th>
+            </tr>
+            for (int row = 0; row < Model.dt.Rows.Count; row++)
+            {
+                DataRow dr = Model.dt.Rows[row];
+                <tr>
+                    @{
+                        for (int col = 0; col < Model.dt.Columns.Count; col++)
+                        {
+
+                            <td>@dr[col]</td>
+                        }
+                    }
+                    <td>
+                        <a href="Issue?id=@dr[0]">
+                            Update
+                        </a>
+                    </td>
+                </tr>
+            }
+        }
+    </table>
+
 </div>
