--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -54,4 +54,8 @@
             <button type="submit">@button_text</button>
         </div>
     </form>
+
+    <div>
+        <a href="Issue?id=0">Create Issue</a>
+    </div>
 </div>
