--- a/Pages/Shared/_Layout_signed_out.cshtml
+++ b/Pages/Shared/_Layout_signed_out.cshtml
@@ -19,6 +19,14 @@
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">@Startup.cnfg.AppName</a>
             </div>
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="/About">About</a>
+                    </li>
+                </ul>
+            </div>
+
         </nav>
     </header>
     <div class="container">
