next is real register

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -6,7 +6,11 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+
 <div><a href="/Admin/Users">Users</a></div>
+
+<h2>The rest is under construction</h2>
+
 <div><a href="/Admin/Projects">Projects</a></div>
 <div><a href="/Admin/Categories">Categories</a></div>
 <div><a href="/Admin/Statuses">Statuses</a></div>
