--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -6,8 +6,32 @@
 }
 
 <script>
-    function on_query_change(id) {
-        window.location.href = "Issues?query_id=" + id
+    function getUrlVars() {
+        var vars = [], hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+        for (var i = 0; i < hashes.length; i++) {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = hash[1];
+        }
+        return vars;
+    }
+
+    function on_query_change() {
+        var query_id = $("#query_id").val();
+        window.location.href = "Issues?page=1&query_id=" + query_id
+    }
+
+    function on_sort(col) {
+        var query_id = $("#query_id").val();
+        var query_string_vars = getUrlVars();
+        var prev_sort = query_string_vars["sort"];
+        var prev_dir = query_string_vars["dir"];
+        var dir = "asc"
+        if (col == prev_sort) {
+            dir = (prev_dir == "asc" ? "desc" : "asc");
+        }
+        window.location.href = "Issues?page=1&query_id=" + query_id + "&sort=" + col + "&dir=" + dir
     }
 </script>
 
@@ -18,7 +42,7 @@
 
 <div>
     Queries
-    <select onchange="on_query_change(this.value)" asp-for="query_id" asp-items="@Model.queries">
+    <select onchange="on_query_change()" asp-for="query_id" asp-items="@Model.queries">
         <option value="">-- Select Query --</option>
     </select>
 </div>
@@ -38,7 +62,7 @@
             {
                 if (Model.page > 1)
                 {
-                    <a href="Issues?query_id=@Model.query_id&page=@(Model.page - 1)">Prev</a>
+                    <a href="Issues?query_id=@Model.query_id&page=@(Model.page - 1)&sort=@Model.sort">Prev</a>
                 }
                 else
                 {
@@ -48,7 +72,7 @@
                 <span>&nbsp;&nbsp;</span>
                 if (Model.page < number_of_pages)
                 {
-                    <a href="Issues?query_id=@Model.query_id&page=@(Model.page + 1)">Next</a>
+                    <a href="Issues?query_id=@Model.query_id&page=@(Model.page + 1)&sort=@Model.sort">Next</a>
                 }
                 else
                 {
@@ -67,8 +91,8 @@
                 @{
                     for (int i = 0; i < Model.dt.Columns.Count; i++)
                     {
-
-                        <th>@Model.dt.Columns[i].ColumnName</th>
+                        string class_name = (@Model.sort == i ? "sorted" : "unsorted");
+                        <th class="@class_name" onclick="on_sort(@i)">@Model.dt.Columns[i].ColumnName</th>
                     }
                 }
                 <th>Action</th>
