--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -40,89 +40,94 @@
     <a href="Issue?id=0">Create Issue</a>
 </div>
 
-<div>
-    Queries
-    <select onchange="on_query_change()" asp-for="query_id" asp-items="@Model.queries">
-        <option value="">-- Select Query --</option>
-    </select>
-</div>
+@{
+    if (Model.dt.Rows.Count > 0)
+    {
+        <div>
+            Queries
+            <select onchange="on_query_change()" asp-for="query_id" asp-items="@Model.queries">
+                <option value="">-- Select Query --</option>
+            </select>
+        </div>
 
-<div>
-    @{
-        int number_of_pages = Model.dt.Rows.Count / Startup.cnfg.RowsPerPage;
-        if (Model.dt.Rows.Count % Startup.cnfg.RowsPerPage > 0)
-        {
-            number_of_pages++;
-        }
-
-        if (number_of_pages > 0)
-        {
-            <span>Page @Model.page of @number_of_pages&nbsp;&nbsp;</span>
-            if (number_of_pages > 1)
-            {
-                if (Model.page > 1)
+        <div>
+            @{
+                int number_of_pages = Model.dt.Rows.Count / Startup.cnfg.RowsPerPage;
+                if (Model.dt.Rows.Count % Startup.cnfg.RowsPerPage > 0)
                 {
-                    <a href="Issues?query_id=@Model.query_id&page=@(Model.page - 1)&sort=@Model.sort">Prev</a>
-                }
-                else
-                {
-                    <span class="gray">Prev</span>
+                    number_of_pages++;
                 }
 
-                <span>&nbsp;&nbsp;</span>
-                if (Model.page < number_of_pages)
+                if (number_of_pages > 0)
                 {
-                    <a href="Issues?query_id=@Model.query_id&page=@(Model.page + 1)&sort=@Model.sort">Next</a>
-                }
-                else
-                {
-                    <span class="gray">Next</span>
-                }
-            }
-        }
-
-    }
-</div>
-
-<div>
-    <table class="dt">
-        @{
-            <tr>
-                @{
-                    for (int i = 0; i < Model.dt.Columns.Count; i++)
+                    <span>Page @Model.page of @number_of_pages&nbsp;&nbsp;</span>
+                    if (number_of_pages > 1)
                     {
-                        string class_name = (@Model.sort == i ? "sorted" : "unsorted");
-                        <th class="@class_name" onclick="on_sort(@i)">@Model.dt.Columns[i].ColumnName</th>
-                    }
-                }
-                <th>Action</th>
-            </tr>
-            int start_row = (Model.page - 1) * Startup.cnfg.RowsPerPage;
-            int row_count = 0;
-
-            for (int row = start_row; row < Model.dt.Rows.Count; row++)
-            {
-                DataRow dr = Model.dt.Rows[row];
-                <tr>
-                    @{
-                        for (int col = 0; col < Model.dt.Columns.Count; col++)
+                        if (Model.page > 1)
                         {
+                            <a href="Issues?query_id=@Model.query_id&page=@(Model.page - 1)&sort=@Model.sort">Prev</a>
+                        }
+                        else
+                        {
+                            <span class="gray">Prev</span>
+                        }
 
-                            <td>@dr[col]</td>
+                        <span>&nbsp;&nbsp;</span>
+                        if (Model.page < number_of_pages)
+                        {
+                            <a href="Issues?query_id=@Model.query_id&page=@(Model.page + 1)&sort=@Model.sort">Next</a>
+                        }
+                        else
+                        {
+                            <span class="gray">Next</span>
                         }
                     }
-                    <td>
-                        <a href="Issue?id=@dr[0]">
-                            Details
-                        </a>
-                    </td>
-                </tr>
-                row_count++;
-                if (row_count == Startup.cnfg.RowsPerPage)
-                {
-                    break;
                 }
+
             }
-        }
-    </table>
-</div>
+        </div>
+
+        <div>
+            <table class="dt">
+                @{
+                    <tr>
+                        @{
+                            for (int i = 0; i < Model.dt.Columns.Count; i++)
+                            {
+                                string class_name = (@Model.sort == i ? "sorted" : "unsorted");
+                                <th class="@class_name" onclick="on_sort(@i)">@Model.dt.Columns[i].ColumnName</th>
+                            }
+                        }
+                        <th>Action</th>
+                    </tr>
+                    int start_row = (Model.page - 1) * Startup.cnfg.RowsPerPage;
+                    int row_count = 0;
+
+                    for (int row = start_row; row < Model.dt.Rows.Count; row++)
+                    {
+                        DataRow dr = Model.dt.Rows[row];
+                        <tr>
+                            @{
+                                for (int col = 0; col < Model.dt.Columns.Count; col++)
+                                {
+
+                                    <td>@dr[col]</td>
+                                }
+                            }
+                            <td>
+                                <a href="Issue?id=@dr[0]">
+                                    Details
+                                </a>
+                            </td>
+                        </tr>
+                        row_count++;
+                        if (row_count == Startup.cnfg.RowsPerPage)
+                        {
+                            break;
+                        }
+                    }
+                }
+            </table>
+        </div>
+    }
+}
