--- a/Pages/Shared/_FlashPartial.cshtml
+++ b/Pages/Shared/_FlashPartial.cshtml
@@ -1,18 +1,25 @@
-<div>
-    <div class="flash_msg">@bd_util.get_flash_msg(Model.HttpContext)</div>
-    @{
-        var errs = bd_util.get_flash_errs(Model.HttpContext);
-        if (errs.Count > 0)
-        {
+@{
+    // not a redirect
+    if (Model.HttpContext.Response.StatusCode == 200)
+    {
 
-            <div class="flash_err">
-                @{
-                    foreach (string err in errs)
-                    {
-                        <div>@err</div>
-                    }
+        <div>
+            <div class="flash_msg">@bd_util.get_flash_msg(Model.HttpContext)</div>
+            @{
+                var errs = bd_util.get_flash_errs(Model.HttpContext);
+                if (errs.Count > 0)
+                {
+
+                    <div class="flash_err">
+                        @{
+                            foreach (string err in errs)
+                            {
+                                <div>@err</div>
+                            }
+                        }
+                    </div>
                 }
-            </div>
-        }
+            }
+        </div>
     }
-</div>
+}
