ready for password reset, query editing

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -15,3 +15,7 @@
 <div><a href="/Admin/Categories">Categories</a></div>
 <div><a href="/Admin/Statuses">Statuses</a></div>
 <div><a href="/Admin/Priorities">Priorities</a></div>
+
+<div><a href="/Admin/Priorities">Queries</a></div>
+
+<div><a href="/Admin/Logs">Logs</a></div>
