reset password works

--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -21,4 +21,4 @@
     <div><input type="submit" value="Login"></div>
 </form>
 <div><a href="Register">Register</a></div>
-<div><a href="ResetPassword">Forgot Password?</a></div>
+<div><a href="ResetPasswordRequest">Forgot Password?</a></div>
