--- a/Pages/ResetPasswordRequest.cshtml
+++ b/Pages/ResetPasswordRequest.cshtml
@@ -9,12 +9,14 @@
     ViewData["Title"] = "Reset Password Request";
 }
 
+<h1>Reset Password Request</h1>
+
 <partial name="_FlashPartial" />
 
 <form method="post">
-    <div>Email
+    <div><label>Email you registered with:</label>
         <input asp-for="email" />
     </div>
-    <div><input type="submit" value="Request Password Reset"></div>
+    <div><button type="submit">Request Password Reset</button></div>
 </form>
 <div><a href="Login">Login</a></div>
