--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -9,16 +9,20 @@
     ViewData["Title"] = "Login";
 }
 
+<h1>Login</h1>
+
 <partial name="_FlashPartial" />
 
 <form method="post">
-    <div>username or email
+    <div>
+        <label>Enter either Username or Email</label>
         <input asp-for="username" />
     </div>
-    <div>password
+    <div>
+        <label>Password</label>
         <input type="password" asp-for="password" />
     </div>
-    <div><input type="submit" value="Login"></div>
+    <div><button type="submit">Login</button></div>
 </form>
 <div><a href="Register">Register</a></div>
 <div><a href="ResetPasswordRequest">Forgot Password?</a></div>
