--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -9,19 +9,21 @@
     ViewData["Title"] = "Register";
 }
 
+<h1>Register</h1>
+
 <partial name="_FlashPartial" />
 
 <form method="post">
-    <div>username
+    <div><label>Username</label>
         <input asp-for="username" />
     </div>
-    <div>email
+    <div><label>Email</label>
         <input type="email" asp-for="email" />
     </div>
-    <div>password
+    <div><label>Create a password</label>
         <input type="password" asp-for="password" />
     </div>
-    <div><input type="submit" value="Register"></div>
+    <div><button type="submit">Register</button></div>
 </form>
 <div><a href="Login">Login</a></div>
-<div><a href="ResetPassword">Forgot Password?</a></div>
+<div><a href="ResetPasswordRequest">Forgot Password?</a></div>
