--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -4,12 +4,13 @@
 @{
     ViewData["Title"] = "Admin";
 }
-<h1>@ViewData["Title"]</h1>
+
+<h1>Admin</h1>
 
 
 <div><a href="/Admin/Users">Users</a></div>
 
-<h2>The rest is under construction</h2>
+<h2>The rest is under construction. Update the db yourself with SQL. See setup.sql</h2>
 
 <div><a href="/Admin/Projects">Projects</a></div>
 <div><a href="/Admin/Categories">Categories</a></div>
