--- a/Pages/Shared/_Layout_signed_out.cshtml
+++ b/Pages/Shared/_Layout_signed_out.cshtml
@@ -21,7 +21,7 @@
 
         <ul class="navbar">
             <li class="nav-item logo">
-                <a class="nav-link" asp-page="/">@Startup.cnfg.AppName</a>
+                <a class="nav-link" asp-page="/Index">@Startup.cnfg.AppName</a>
             </li>
 
             <li class="nav-item">
