--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -49,7 +49,7 @@
         to break the
         COVID-19 monotony.
     <p>
-        Budoco runs on Microsoft's cross-platform Dotnet Core 5 can run.
+        Budoco runs on Microsoft's cross-platform Dotnet Core 5.
         I've been developing it on Linux Mint, based on Ubuntu 20.04.
         It uses Postgres as its database.
     </p>
